--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -236,29 +236,25 @@
 </div>
 
 <nav class="nav-cont">
-    <div class="nav-primary">
-        <div class="nlink-cont np-readingtime">
-            <a class="navlink_original" asp-controller="Home" asp-action="Read" asp-route-type="Story">Story</a>
-            <a class="navlink_scenario" asp-controller="Home" asp-action="Read" asp-route-type="Scenario">Scenario</a>
-            <a class="navlink_fanfiction" asp-controller="Home" asp-action="Read"
-                asp-route-type="Fanfiction">Fanfiction</a>
-            <a class="navlink_original" asp-controller="Home" asp-action="Read" asp-route-type="Plot">Plot</a>
-        </div>
-        <div class="nlink-cont np-aboutyou">
-            <a class="">Library</a>
-            <a class="">My Stuff</a>
-            <a class="">History</a>
-        </div>
+    <div class="start_reading_links">
+        <a class="read_link" href="/Read/Novel">
+            <i class="bi bi-book"></i><span>Novel</span>
+        </a>
+        <a class="read_link" href="/Read/Fanfiction">
+            <i class="bi bi-book"></i><span>Fanfiction</span>
+        </a>
+        <a class="read_link" href="/Read/Graphical">
+            <i class="bi bi-book"></i><span>Graphical</span>
+        </a>
+        <a class="read_link" href="/Read/Script">
+            <i class="bi bi-book"></i><span>Script</span>
+        </a>
+        <a class="read_link" href="/Read/Plot">
+            <i class="bi bi-book"></i><span>Plot</span>
+        </a>
     </div>
-    <div class="nav-others">
-        <a class="">Requests</a>
-        <a class="">Community</a>
-        <a class="">Shop</a>
-        <a class="">Customize</a>
-        <a class="">Settings</a>
-        <a class="">News</a>
-        <a class="">Tutorials</a>
-    </div>
+
+
     <div class="nav-ad1">
 
     </div>
