--- a/OmneFictio.Web/wwwroot/css/chapter.scss
+++ b/OmneFictio.Web/wwwroot/css/chapter.scss
@@ -1,8 +1,8 @@
 main {
     width: 100%;
-    border-radius: 16px;
     color: var(--text-color1);
     background-color: var(--background-color1);
+    border-bottom: 1px solid var(--background-color2);
 }
 
 .chapter-container {
@@ -32,20 +32,16 @@ main {
     .ch-navigation {
         display: flex;
         justify-content: space-between;
-        font-family: 'Itim', cursive;
+        font-family: 'Gudea', cursive;
 
         select {
             color: var(--text-color1);
-            background: var(--background-color2);
+            background: var(--input-bg1);
+            border: 1px solid var(--input-border1);
             padding: 4px 8px;
             border-radius: 5px;
             font-size: 1.1rem;
             cursor: pointer;
-            transition: background-color 0.1s;
-
-            &:hover {
-                background-color: var(--background-color5);
-            }
         }
 
         .ch-navigationicons {
@@ -55,19 +51,15 @@ main {
             a {
                 font-size: 1.2rem;
                 border-radius: 5px;
-                background-color: var(--background-color2);
+                background-color: var(--input-bg1);
+                border: 1px solid var(--input-border1);
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 width: 34px;
-                transition: background-color 0.1s;
 
                 i {
                     display: flex;
-                }
-
-                &:hover {
-                    background-color: var(--background-color5);
                 }
             }
 
@@ -211,6 +203,8 @@ main {
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
     main {
+        border: 1px solid var(--background-color2);
+        border-radius: 4px;
         padding: 14px 20px;
         margin-top: 14px;
     }
