--- a/OmneFictio.Web/wwwroot/css/index_2.scss
+++ b/OmneFictio.Web/wwwroot/css/index_2.scss
@@ -92,9 +92,9 @@ main{
             width: 100%;
             .post{
                 margin-bottom: 12px;
-                background-color: var(--index-post-bg-color);
+                background-color: var(--post-bgcolor1);
                 .p-info{
-                    background-color: var(--index-post-bg-color);
+                    background-color: var(--post-bgcolor1);
                 }
             }
         }
