--- a/OmneFictio.Web/wwwroot/css/settings.scss
+++ b/OmneFictio.Web/wwwroot/css/settings.scss
@@ -1,6 +1,6 @@
 main {
     display: flex;
-    gap: 6px;
+    gap: 6px 14px;
     color: var(--text-color1);
     align-items: flex-start;
     padding-top: 8px;
@@ -64,8 +64,9 @@ nav {
             display: none;
             width: 100%;
             background-color: var(--background-color1);
+            border: 1px solid var(--background-color2);
             padding: 10px 0 20px;
-            border-radius: 8px;
+            border-radius: 4px;
 
             li {
 
@@ -80,7 +81,7 @@ nav {
                     padding: 7px 40px 7px 20px;
                     font-size: 1.5rem;
                     transition: all 0.1s ease;
-                    border-bottom: 1px solid var(--background-color4);
+                    border-bottom: 1px solid var(--background-color2);
 
                     &:hover {
                         background-color: var(--settings-hovernav);
@@ -98,9 +99,10 @@ nav {
 
 .settings_body {
     width: 100%;
-    background-color: var(--background-color1);
     min-height: 600px;
-    border-radius: 8px;
+    border-radius: 4px;
+    background-color: var(--background-color1);
+    border-bottom: 1px solid var(--background-color2);
 }
 
 .settings_body .s-profile_settings {
@@ -134,7 +136,8 @@ nav {
                 outline: none;
                 border-radius: 6px;
                 padding: 8px;
-                background-color: var(--background-color2);
+                background-color: var(--input-bg1);
+                border: 1px solid var(--background-color2);
                 color: var(--text-color1);
                 margin-bottom: 10px;
                 font-family: 'Itim', cursive;
@@ -310,6 +313,9 @@ nav {
                 display: block;
             }
         }
+    }
+    .settings_body{
+        border: 1px solid var(--background-color2);
     }
 
     .settings_body .s-library {
