--- a/OmneFictio.Web/wwwroot/css/theme.css
+++ b/OmneFictio.Web/wwwroot/css/theme.css
@@ -12,45 +12,49 @@
   --div-boxshadow1: #31313150;
   --text-boxshadow1: #ffffff50;
   --text-boxshadow2: #ffffff70;
+  --input-bg1: #313131;
+  --input-border1: #5e5e5e;
   --modal-background: #313131;
   --modal-line1: #3b3b3b;
   --modal-item-hover: #373737;
   --headericon-color: #ffffff;
   --accountdropdown-icon-hover: #ffffff10;
   --dropdownbg-color: #313131;
-  --accountdropdown-themeswitcher: #454545;
-  --accountdropdown-themeswitcher-hover: #4f4f4f;
+  --accountdropdown-themeswitcher: #313131;
+  --accountdropdown-themeswitcher-hover: #434242;
   --shortcuticons-color: #ffffff;
   --searchbar-bg-color: #313131;
   --searchbar-boxshadow: #31313150;
+  --post-bgcolor1: #313131;
+  --profile-post-color: #272727;
+  --comment-menu-bgcolor: #3b3b3b;
+  --reply-bgcolor: #313131;
+  --replies-bordercolor: #424242;
   --navlink-readingtime-color: #415050;
   --navlink-readingtime-color-hover: #607d7d;
   --navlink-aboutyou-color: #473c3c;
   --navlink-aboutyou-color-hover: #6c5959;
   --navlink-others-color: #494152;
   --navlink-others-color-hover: #5f5a66;
-  --index-post-bg-color: #313131;
   --index-bgcolor1: #313131;
   --index-bgcolor2: #454545;
   --index-border1: #595959;
+  --read-bgcolor1: #313131;
+  --read-bgcolor2: #454545;
+  --read-border1: #595959;
   --register-form-color: #404040;
   --register-input-color: #1d1d1d;
   --publish-form-color: #404040;
   --publish-input-color: #1d1d1d;
-  --create-input-bg: #313131;
   --create-border1: #313131;
   --create-border2: #595959;
   --pd-actionbtns-color: #444444;
   --pd-actionbtns-color-hover1: #5e5e5e;
   --pd-actionbtns-color2: #444444;
   --pd-actionbtns-color-hover2: #5e5e5e;
-  --comment-menu-bgcolor: #3b3b3b;
-  --reply-bgcolor: #313131;
-  --replies-bgcolor: #424242;
   --settings-hovernav: #252525;
   --settings-activetab: #3e6e7a;
   --profile-activetab: #3e6e7a;
-  --profile-post-color: #272727;
   --tabrefresh-background-color: #2d2d2d;
   --postskeleton-itemcolor-start: #434343;
   --postskeleton-itemcolor-end: #686868;
@@ -85,45 +89,49 @@
   --div-boxshadow1: #e5e5e550;
   --text-boxshadow1: #00000050;
   --text-boxshadow2: #00000070;
+  --input-bg1: #f7f7f7;
+  --input-border1: #5e5e5e;
   --modal-background: #dcdcdc;
   --modal-line1: #b5b5b5;
-  --modal-item-hover: #d1d8db;
+  --modal-item-hover: #e1e1e1;
   --headericon-color: #ffffff;
   --accountdropdown-icon-hover:#00000010;
-  --dropdownbg-color: #e7e7e7;
-  --accountdropdown-themeswitcher: #d2d2d2;
-  --accountdropdown-themeswitcher-hover: #c1c1c1;
+  --dropdownbg-color: #f0f0f0;
+  --accountdropdown-themeswitcher: #f7f7f7;
+  --accountdropdown-themeswitcher-hover: #e8e8e8;
   --shortcuticons-color: #626262;
   --searchbar-bg-color: #f0f0f0;
   --searchbar-boxshadow: #6868684f;
+  --post-bgcolor1: #f9f9f9;
+  --profile-post-color: #ffffff;
+  --comment-menu-bgcolor: #e3e3e3;
+  --reply-bgcolor: #e1e1e1;
+  --replies-bordercolor: #a5a5a5;
   --navlink-readingtime-color: #9298b9;
   --navlink-readingtime-color-hover: #777ea8;
   --navlink-aboutyou-color: #a08888;
   --navlink-aboutyou-color-hover: #8d6767;
   --navlink-others-color: #9a90a6;
   --navlink-others-color-hover: #816f96;
-  --index-post-bg-color: #ffffff;
   --index-bgcolor1: #f9f9f9;
   --index-bgcolor2: #ffffff;
   --index-border1: #dcdcdc;
+  --read-bgcolor1: #f9f9f9;
+  --read-bgcolor2: #ffffff;
+  --read-border1: #dcdcdc;
   --register-form-color: #f0f0f0;
   --register-input-color: #dcdcdc;
   --publish-form-color: #f0f0f0;
   --publish-input-color: #dcdcdc;
-  --create-input-bg: #f7f7f7;
   --create-border1: #dcdcdc;
   --create-border2: #dcdcdc;
   --pd-actionbtns-color: #c7c7c7;
   --pd-actionbtns-color-hover1: #c5c5c5;
   --pd-actionbtns-color2: #c7c7c7;
   --pd-actionbtns-color-hover2: #bbbbbb;
-  --comment-menu-bgcolor: #e3e3e3;
-  --reply-bgcolor: #dcdcdc;
-  --replies-bgcolor: #f0f0f0;
   --settings-hovernav: #e3e3e3;
   --settings-activetab: #32a1bc;
   --profile-activetab: #32a1bc;
-  --profile-post-color: #ffffff;
   --tabrefresh-background-color: #dcdcdc;
   --postskeleton-itemcolor-start: #313131;
   --postskeleton-itemcolor-end: #858585;
