--- a/OmneFictio.Web/wwwroot/css/post.css
+++ b/OmneFictio.Web/wwwroot/css/post.css
@@ -1,22 +1,13 @@
 main {
   background-color: var(--background-color1);
-  border-radius: 10px;
   display: flex;
   flex-direction: column;
+  border-bottom: 1px solid var(--background-color2);
 }
 
 .post-wrap {
   min-height: 200px;
   margin-top: 10px;
-}
-
-@-webkit-keyframes pmskel-loading-divspan {
-  0% {
-    background-color: var(--postskeleton-itemcolor-start);
-  }
-  100% {
-    background-color: var(--postskeleton-itemcolor-end);
-  }
 }
 
 @keyframes pmskel-loading-divspan {
@@ -25,14 +16,6 @@ main {
   }
   100% {
     background-color: var(--postskeleton-itemcolor-end);
-  }
-}
-@-webkit-keyframes pmskel-loading-i {
-  0% {
-    color: var(--postskeleton-itemcolor-start);
-  }
-  100% {
-    color: var(--postskeleton-itemcolor-end);
   }
 }
 @keyframes pmskel-loading-i {
@@ -53,13 +36,11 @@ main {
 .postmain-skel span.pmsk-item,
 .postmain-skel div.pmsk-item {
   opacity: 0.5;
-  -webkit-animation: pmskel-loading-divspan 1s linear infinite alternate;
-          animation: pmskel-loading-divspan 1s linear infinite alternate;
+  animation: pmskel-loading-divspan 1s linear infinite alternate;
 }
 .postmain-skel i.pmsk-item {
   opacity: 0.7;
-  -webkit-animation: pmskel-loading-i 1s linear infinite alternate;
-          animation: pmskel-loading-i 1s linear infinite alternate;
+  animation: pmskel-loading-i 1s linear infinite alternate;
 }
 .postmain-skel .pmsk-section1 {
   flex-grow: 1;
@@ -207,8 +188,7 @@ main {
   border-radius: 50%;
   border: 3px solid var(--text-color1);
   border-color: var(--postmainskeleton-itemcolor-end) transparent var(--postmainskeleton-itemcolor-end) transparent;
-  -webkit-animation: loading-dual-ring 1.2s linear infinite;
-          animation: loading-dual-ring 1.2s linear infinite;
+  animation: loading-dual-ring 1.2s linear infinite;
 }
 .postmain-skel .pmsk-section2 {
   display: flex;
@@ -647,7 +627,7 @@ main {
   padding-bottom: 6px;
 }
 .modal-chapters-cont .modal-chapters .mc-header {
-  border-bottom: 2px solid var(--background-color3);
+  border-bottom: 2px solid var(--modal-line1);
   display: flex;
   flex-direction: row;
 }
@@ -720,7 +700,9 @@ main {
 }
 @media (min-width: 768px) {
   main {
+    border: 1px solid var(--background-color2);
     margin-top: 10px;
+    border-radius: 4px;
     padding: 10px 16px 0;
   }
   .add_comment-cont .ac-footer .comment-btn {
